<resources>
    <string name="app_name">Quick Coach</string>
    <string name="choose_option">Choose Option</string>
    <string name="no_browser_app_available">There is not any browser app available in your phone</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text\n of the industry</string>
    <string name="what_is_quick_coach"><u>What is Quick Coach?</u></string>
    <string name="faq">\u0020 - \u0020<u>FAQ</u></string>
    <string name="contact_us">\u0020 - \u0020<u>Contact Us</u></string>
    <string name="contactus">Contact Us</string>
    <string name="link_contact_us">Contact Us</string>
    <string name="organize_event_details">Organize Event Details</string>
    <string name="player">PLAYER</string>
    <string name="player_s">Player</string>
    <string name="playerinfo">PLAYER INFO</string>
    <string name="coaches">COACHES</string>
    <string name="coaches_info">COACH INFO</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="steve">Steve</string>
    <string name="jordan">Jordan</string>
    <string name="gmail">steavejordan@gmail.com</string>
    <string name="sign_up_and_start_coaching">Sign Up and\nstart coaching</string>
    <string name="first_name">First Name</string>
    <string name="first_red">First Name<font color='#e35656'>*</font></string>
    <string name="first">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="last_red">Last Name<font color='#e35656'>*</font></string>
    <string name="last">Last Name*</string>
    <string name="email">Email</string>
    <string name="email_star_red">Email<font color='#e35656'>*</font></string>
    <string name="email_star">Email*</string>
    <string name="already_registered">Already registered?</string>
    <string name="password">Password</string>
    <string name="password_star">Password*</string>
    <string name="not_register">Not registered?</string>
    <string name="term_of_use">Term Of use</string>
    <string name="privacy_notice">privacy notice</string>
    <string name="by_signing_up_you_agree_to_our_team_of_use_and_privacy_notice">By signing up you agree to our Term Of use </string>
    <string name="if_you_would_like_to_organize_an_event_through_QUICK_COACH_you_can_request_from_here">If you would like to organize an event through QUICK COACH, you can request from here !!</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="save">Save</string>
    <string name="glad_to_meet_you_again">Glad to meet\nyou again!</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="type_coach_name">Search Coach</string>
    <string name="type_player_name">Search Player</string>
    <string name="dummy_name">Kosh Kawan</string>
    <string name="subscribe_coach_from_web">Subscribe coach</string>
    <string name="get_this_coach_advice">Get this coach advice!</string>
    <string name="get_advice">Get advice</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="chat_list">CHAT LIST</string>
    <string name="activity">ACTIVITY</string>
    <string name="type_event_sports_name">Type event , sports name</string>
    <string name="apply_this_from_web">Apply</string>
    <string name="in_progress">In Progress</string>
    <string name="please_enter_your_registered_email_address_to_receive_new_password">
        Please enter your registered email address\nto receive new password
    </string>
    <string name="submit">Submit</string>
    <string name="home">HOME</string>
    <string name="user_name">Steave Jorden</string>
    <string name="ken">Ken</string>
    <string name="user_coach_name">Ken Kou Jaz</string>
    <string name="your_coaches">Your Coaches</string>
    <string name="your_Archive">Archived Coaches</string>
    <string name="player_level">PLAYER LEVEL</string>
    <string name="your_level">Your Level</string>
    <string name="just_started_.._lets_clear_each_item_to_boast_up">Just Started.Lets clear each item To boost up</string>
    <string name="know_more_about_level"><u>Know More About Levels</u></string>
    <string name="lets_Login.">Lets Login..</string>
    <string name="verify_your_identify_by_your_id">Verify your Identify by your Id.</string>
    <string name="fill_out_all_your_profile">Fill out all your profile</string>
    <string name="get_your_bookmarked">Get your bookmarked</string>
    <string name="post_your_message_on_quick_coach_sns">Post your message on QUICK COACH SNS.</string>
    <string name="apply_and_join_an_event">Apply and join an event</string>
    <string name="level_info">LEVEL INFO</string>
    <string name="bookmark_your_3_favorite_coaches">Bookmark your 3 favorite coaches</string>
    <string name="choose_a_coach_and_send_your_first_message">Choose a coach and send your first message.</string>
    <string name="send_your_video_to_ask_their_advise">Send your video to ask their advise</string>
    <string name="keep_conversation_with_your_coach_for_3days">Keep conversation with your coach for 3days</string>
    <string name="settings">SETTINGS</string>
    <string name="profile">Profile</string>
    <string name="profiles">PROFILE</string>
    <string name="notification">NOTIFICATION</string>
    <string name="notifications">Notifications</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="continue_with_begginers">Continue With</string>
    <string name="logout">Logout</string>
    <string name="lock_profile">Lock Profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="beginner">Beginner</string>
    <string name="price_value">¥499</string>
    <string name="pm">p/m</string>
    <string name="billing_timing">Billing Timing:</string>
    <string name="per_quick_advice">Per Quick Advice</string>
    <string name="advised_period">Advice Period:</string>
    <string name="shared_within_a_Team">Shared within a team:</string>
    <string name="event_participation">Event Participation:</string>
    <string name="free_trail_no">Free trail no:</string>
    <string name="get_a_medal_from_your_coaches">Get a Medal from your coaches.</string>
    <string name="keep_training_with_quick_coach_for_a_half_year">Keep training with QUICK COACH for a half year</string>
    <string name="invite_one_your_friend_to_quick_coach">Invite one your friend to QUICK COACH.</string>
    <string name="get_3_medals_from_your_coaches">Get 3 Medals from your coaches</string>
    <string name="invite_3_your_friends_to_quick_coach">Invite 3 your friends to QUICK COACH</string>
    <string name="keep_training_with_quick_coach_for_6_months">Keep training with QUICK COACH for 6 months.</string>
    <string name="get_advice_from_anywhere">Get Advice From Anywhere</string>
    <string name="lorem_ipsum_dolor_sit_amet_dummy_text">Lorem ipsum dolor sit amet, consectetur ad plscing elit.\n Accursian, so llicitudin ornare cras ut ac. Neque amet.\n at gravida vel nibh gravida.</string>
    <string name="next">Next</string>
    <string name="choose_us_Choose_right_coach">Choose us, Choose\nRight Coach.</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="enter_16_digit_card_number">Enter 16 digit card number</string>
    <string name="valid_until">Valid Until</string>
    <string name="mmyy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="pasword">****</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="enter_here">Enter here</string>
    <string name="total">Total:</string>
    <string name="paynow">Pay now</string>
    <string name="cancel">Cancel</string>
    <string name="enter_coaching_details">Enter coaching details</string>
    <string name="what_is_your_expertise">What is your expertise</string>
    <string name="what_is_your_expertise_star">What is your expertise*</string>
    <string name="expertise">Expertise</string>
    <string name="expertise_star">Expertise<font color='#e35656'>*</font></string>
    <string name="school_name">School Name</string>
    <string name="school_name_star_red">School Name</string>
    <string name="organizations_where_you_belong">Organizations where you belong</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="experience_Years_as_a_coach_star_red">Experience Years as a coach<font color='#e35656'>*</font></string>
    <string name="experience_years_as_a_coach">Experience years as a coach</string>
    <string name="coach_continue">Continue</string>
    <string name="upload_id">Upload Id*</string>
    <string name="team_plan_price">Team Plan Price</string>
    <string name="years_of_experience_star_red">経験<font color='#e35656'>*</font></string>
    <string name="enter_account_details">Enter account details</string>
    <string name="timing">Timing</string>
    <string name="events">Events</string>
    <string name="events_name">Events Name*</string>
    <string name="please_enter_event_name">Please enter event name</string>
    <string name="please_enter_events_details">Please enter events details</string>
    <string name="events_details">Events Details*</string>
    <string name="event_info">EVENT INFO</string>
    <string name="regular">Regular</string>
    <string name="dream">Dream</string>
    <string name="team">Team</string>
    <string name="track_records_experiences"><![CDATA[Track Records & Experiences:]]></string>
    <string name="a_winner_of_2020_japan_cup">A Winner of 2020 Japan Cup.</string>
    <string name="a_team_coach_of_xxx_school_basket_nball_club_since_2021">A team coach of XXX school basket\nball club since 2021.</string>
    <string name="available_time">Available Time:</string>
    <string name="_10am_8pm_mon_fri">10am-8pm (Mon-Fri)</string>
    <string name="coach_level">COACH LEVEL</string>
    <string name="your_players">Your Players</string>
    <string name="website"><u>website.</u></string>
    <string name="which_sports_you_play">Which sports\nyou play?</string>
    <string name="cricket">Cricket</string>
    <string name="basketball">BasketBall</string>
    <string name="tennis">Tennis</string>
    <string name="chess">Chess</string>
    <string name="football">FootBall</string>
    <string name="swimming">Swimming</string>
    <string name="marathon_practice">2 Hr Marathon Practice</string>
    <string name="haribostreet_meldo">Haribo Street, Meldo</string>
    <string name="date">23,May-4:30 PM</string>
    <string name="apply">Apply</string>
    <string name="request_for_event"><b>Request For Event</b></string>
    <string name="dummy_textlorem">Lorem lpsum is simply dummy text of the printing and typesetting industry. Lorem lpsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="players">PLAYERS</string>
    <string name="coach">Coach</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_type">Account Type</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="checking">Checking</string>
    <string name="savings">Savings</string>
    <string name="su">Su</string>
    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="start_time">Start time</string>
    <string name="hh_mm">HH/MM</string>
    <string name="hour">Hour</string>
    <string name="to">To</string>
    <string name="add">Add</string>
</resources>