<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    android:visibility="gone"
    tools:context=".fragments.TimingFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_4sdp"
      android:orientation="horizontal">

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnSun"
         style="@style/Text12RegularWhiteStyle"
         android:layout_width="@dimen/_29sdp"
         android:layout_height="@dimen/_29sdp"
         android:background="@drawable/dr_bg_gray"
         android:gravity="center"
         android:padding="0dp"
         android:text="@string/su"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnMon"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/mo"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnTue"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/tu"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnWed"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/we"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnThu"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/th"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnFri"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/fr"  />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/btnSat"
          style="@style/Text12RegularWhiteStyle"
          android:layout_width="@dimen/_29sdp"
          android:layout_height="@dimen/_29sdp"
          android:layout_marginStart="@dimen/_10sdp"
          android:background="@drawable/dr_bg_gray"
          android:gravity="center"
          android:padding="0dp"
          android:text="@string/sa"  />

   </LinearLayout>
   
   <androidx.appcompat.widget.AppCompatTextView
       style="@style/Text12RegularGrayStyle"
      android:layout_marginTop="@dimen/_10sdp"
      android:text="@string/start_time" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/edtMorningStartTime"
         style="@style/EditTextParentStyle"
         android:layout_weight="0.5"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:hint="@string/hh_mm" />
      
      <androidx.appcompat.widget.AppCompatTextView
          style="@style/Text12RegularWhiteStyle"
         android:layout_width="wrap_content"
         android:text="@string/to" />
      
      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/edtMorningEndTime"
         style="@style/EditTextParentStyle"
         android:layout_weight="0.5"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:hint="@string/hh_mm" />

   </LinearLayout>
   
   <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/btnAdd"
      style="@style/ButtonParentStyle"
       android:layout_width="@dimen/_100sdp"
       android:layout_gravity="center"
      android:layout_margin="@dimen/_20sdp"
      android:text="@string/add"  />
   
   <View
      style="@style/HorizontalViewStyle" />
   
   <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvDay"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_5sdp" />


</androidx.appcompat.widget.LinearLayoutCompat>