<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".Activity.PaymentActivity">

    <com.quickcoach.customs.CustomHeader
        android:id="@+id/customHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text12RegularWhiteStyle"
                android:layout_width="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/card_number"
                android:textColor="@color/colorSubBackground" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCardNumber"
                style="@style/EditTextParentStyle"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:hint="@string/enter_16_digit_card_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text12RegularWhiteStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/valid_until"
                        android:textColor="@color/colorSubBackground" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtName"
                        style="@style/EditTextParentStyle"
                        android:layout_width="@dimen/_120sdp"
                        android:hint="@string/mmyy"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="10" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text12RegularWhiteStyle"
                        android:layout_width="wrap_content"
                        android:text="@string/cvv"
                        android:textColor="@color/colorSubBackground" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtCVV"
                        style="@style/EditTextParentStyle"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="numberPassword"
                        android:maxLength="4" />

                </LinearLayout>

            </LinearLayout>
            
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                style="@style/Text12RegularWhiteStyle"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:textColor="@color/colorSubBackground"
                android:text="@string/card_holder_name" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCardHolderName"
                style="@style/EditTextParentStyle"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:hint="@string/enter_here"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/_10sdp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    style="@style/Text8RegularWhiteStyle"
                    android:hint="@string/total"
                    android:textColor="@color/colorSubBackground"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    style="@style/Text10BoldWhiteStyle"
                    android:text="@string/price_value" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPayNow"
                style="@style/ButtonParentStyle"
                android:layout_align_ParentBottom = "true"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:text="@string/paynow" />

        </LinearLayout>
        
    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>